# notese

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: copilo_instrucions.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/cli/: Cli.hpp
src/app/tui/: Tui.hpp
src/domain/: CMakeLists.txt
src/domain/include/: IntegerId.hpp  Note.hpp  NoteId.hpp  NoteIdConcept.hpp  NoteRepositoryConcept.hpp  Reminder.hpp  StringId.hpp
src/domain/src/: Note.cpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/include/: InMemoryNoteRepository.hpp  MarkdownNoteRepository.hpp  MarkdownReminderRepository.hpp
src/infrastructure/src/: infrastructure.cpp
tests/: CMakeLists.txt
tests/domain/: CMakeLists.txt  IntegerIdEqualityComparesUnderlyingValueTests.cpp  IntegerIdFromStringParsesValueTests.cpp  IntegerIdHashProducesSameValueForEqualIdsTests.cpp  IntegerIdOrderingComparesNumericallyTests.cpp  IntegerIdToStringReturnsUnderlyingValueTests.cpp  NoteCreateNewInitializesFieldsAndTimestampsTests.cpp  NoteCreateNewWithIntegerIdInitializesFieldsAndTimestampsTests.cpp  NoteDefaultComparisonTreatsDifferentValuesAsNotEqualTests.cpp  NoteDefaultComparisonTreatsEqualValuesAsEqualTests.cpp  NoteTests.cpp  NoteWithUpdatedContentPreservesIdentityAndCreatedAtTests.cpp  NoteWithUpdatedTitlePreservesIdentityAndCreatedAtTests.cpp  ReminderCreateNewInitializesFieldsAndTimestampsTests.cpp  ReminderDefaultComparisonTreatsDifferentValuesAsNotEqualTests.cpp  ReminderDefaultComparisonTreatsEqualValuesAsEqualTests.cpp  ReminderWithUpdatedContentPreservesIdentityAndCreatedAtTests.cpp  ReminderWithUpdatedRemindAtPreservesIdentityAndCreatedAtTests.cpp  ReminderWithUpdatedTitlePreservesIdentityAndCreatedAtTests.cpp  StringIdEqualityComparesUnderlyingValueTests.cpp  StringIdHashProducesSameValueForEqualIdsTests.cpp  StringIdOrderingComparesLexicographicallyTests.cpp  StringIdToStringReturnsUnderlyingValueTests.cpp  TestCommon.hpp
tests/infrastructure/: CMakeLists.txt  InMemoryNoteRepositoryGetReturnsNulloptForMissingTests.cpp  InMemoryNoteRepositoryListReturnsAllSavedNotesTests.cpp  InMemoryNoteRepositoryNextIdDoesNotReuseAfterRemoveTests.cpp  InMemoryNoteRepositoryNextIdReturnsMaxPlusOneAfterSavesTests.cpp  InMemoryNoteRepositoryNextIdReturnsOneForEmptyRepoTests.cpp  InMemoryNoteRepositoryRemoveDeletesNoteTests.cpp  InMemoryNoteRepositorySaveAndGetReturnsNoteTests.cpp  InMemoryNoteRepositorySaveAndGetWithIntegerIdReturnsNoteTests.cpp  InMemoryNoteRepositorySaveOverwritesExistingNoteTests.cpp  InMemoryReminderRepositoryGetReturnsNulloptForMissingTests.cpp  InMemoryReminderRepositoryListReturnsAllSavedRemindersTests.cpp  InMemoryReminderRepositoryNextIdReturnsOneForEmptyRepoTests.cpp  InMemoryReminderRepositoryRemoveDeletesReminderTests.cpp  InMemoryReminderRepositorySaveAndGetReturnsReminderTests.cpp  MarkdownNoteRepositoryGetReturnsNulloptForMissingTests.cpp  MarkdownNoteRepositoryListReturnsAllSavedNotesTests.cpp  MarkdownNoteRepositoryNextIdReturnsMaxPlusOneAfterSavesTests.cpp  MarkdownNoteRepositoryNextIdReturnsOneForEmptyDirectoryTests.cpp  MarkdownNoteRepositoryRemoveDeletesFileTests.cpp  MarkdownNoteRepositorySaveAndGetRoundtripsNoteTests.cpp  MarkdownNoteRepositorySaveAndGetRoundtripsNoteWithIntegerIdTests.cpp  MarkdownReminderRepositoryGetReturnsNulloptForMissingTests.cpp  MarkdownReminderRepositoryListReturnsAllSavedRemindersTests.cpp  MarkdownReminderRepositoryNextIdReturnsMaxPlusOneAfterSavesTests.cpp  MarkdownReminderRepositoryNextIdReturnsOneForEmptyDirectoryTests.cpp  MarkdownReminderRepositoryRemoveDeletesFileTests.cpp  MarkdownReminderRepositorySaveAndGetRoundtripsReminderTests.cpp  TestCommon.hpp
