add_executable(domain_tests
	NoteCreateNewInitializesFieldsAndTimestampsTests.cpp
	NoteCreateNewWithIntegerIdInitializesFieldsAndTimestampsTests.cpp
	NoteDefaultComparisonTreatsEqualValuesAsEqualTests.cpp
	NoteDefaultComparisonTreatsDifferentValuesAsNotEqualTests.cpp
	NoteWithUpdatedContentPreservesIdentityAndCreatedAtTests.cpp
	NoteWithUpdatedTitlePreservesIdentityAndCreatedAtTests.cpp
	StringIdToStringReturnsUnderlyingValueTests.cpp
	StringIdEqualityComparesUnderlyingValueTests.cpp
	StringIdHashProducesSameValueForEqualIdsTests.cpp
	StringIdOrderingComparesLexicographicallyTests.cpp
	IntegerIdToStringReturnsUnderlyingValueTests.cpp
	IntegerIdEqualityComparesUnderlyingValueTests.cpp
	IntegerIdHashProducesSameValueForEqualIdsTests.cpp
	IntegerIdOrderingComparesNumericallyTests.cpp
	IntegerIdFromStringParsesValueTests.cpp)

target_include_directories(domain_tests PRIVATE ${CMAKE_SOURCE_DIR}/src/domain/include)

target_link_libraries(domain_tests PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(domain_tests)