add_executable(infrastructure_tests
	InMemoryNoteRepositorySaveAndGetReturnsNoteTests.cpp
	InMemoryNoteRepositoryGetReturnsNulloptForMissingTests.cpp
	InMemoryNoteRepositoryRemoveDeletesNoteTests.cpp
	InMemoryNoteRepositoryListReturnsAllSavedNotesTests.cpp
	InMemoryNoteRepositorySaveOverwritesExistingNoteTests.cpp
	MarkdownNoteRepositorySaveAndGetRoundtripsNoteTests.cpp
	MarkdownNoteRepositoryGetReturnsNulloptForMissingTests.cpp
	MarkdownNoteRepositoryRemoveDeletesFileTests.cpp
	MarkdownNoteRepositoryListReturnsAllSavedNotesTests.cpp)

target_include_directories(infrastructure_tests PRIVATE
	${CMAKE_SOURCE_DIR}/src/infrastructure/include
	${CMAKE_SOURCE_DIR}/src/domain/include)

target_link_libraries(infrastructure_tests PRIVATE GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(infrastructure_tests)
